@@ -12,7 +12,7 @@ from torchmetrics.functional import accuracy
 from torch.nn.functional import cross_entropy
 from torch.utils.data import DataLoader
 tr = pl.Trainer(accelerator='gpu', devices=1, max_epochs=1, enable_progress_bar=False)
-# dtrn = ld.calvindataset("../data/D-training")
-# dval = ld.calvindataset("../data/D-validation")
-# abcval = ld.calvindataset("../data/ABC-validation")
-# abcdval = ld.calvindataset2("../data/ABCD-validation") # same as abcval
+# dtrn = ld.calvindataset("data/D-training")
+# dval = ld.calvindataset("data/D-validation")
+# abcval = ld.calvindataset("data/ABC-validation")
+# abcdval = ld.calvindataset2("data/ABCD-validation") # same as abcval
