@@ -10,9 +10,10 @@
 	- Inputs: try different subsets
 	- Inputs: try different representations (voxels & convolution?)
 
-	* Leaderboard: After fixing the color-swap bug (x marks runs with buggy dataset):
+	* Leaderboard: After fixing the color-swap bug (x marks runs with buggy dataset for comparison):
 	RNNABC	.8912	lightning_logs/version_4853865/checkpoints/epoch=116-step=65403.ckpt	{'batch_size': 32, 'hidden_size': 256, 'num_layers': 2, 'output_interval': 32, 'lr': 0.0001, 'max_steps': 100000, 'dropout': 0.1, 'weight_decay': 2.0}
 	RNNABCx	.8645	lightning_logs/version_4852828/checkpoints/epoch=177-step=99502.ckpt -f'range(74,98)'	{'batch_size': 32, 'hidden_size': 128, 'num_layers': 1, 'output_interval': 16, 'lr': 0.0001, 'max_steps': 100000, 'dropout': 0.75, 'weight_decay': 1.0}{'instances_per_episode': 1, 'context_length': 64, 'features': range(74, 98)}
+	MLPABC	.8863	mlp_project/glfqykq5/checkpoints/epoch=10-step=49148.ckpt	{'batch_size': 32, 'hidden': [256], 'lr': 0.0001, 'max_steps': 100000, 'dropout': 0.75, 'weight_decay': 0.5}{'instances_per_episode': 8, 'context_length': 64, 'features': range(1, 98)}
 	MLPABCx	.7250	mlp_project/scsbwf6q/checkpoints/epoch=266-step=149253.ckpt -c 64 -f 'list(range(1,54))+list(range(66,74))'	{'batch_size': 32, 'hidden': [512, 512], 'lr': 0.0001, 'max_epochs': 300, 'dropout': 0.75, 'weight_decay': 0.25}; instances_per_episode=1, context_length=64, features=list(range(1,54))+list(range(66,74))
 	RABCDx	.9169	lightning_logs/version_4852496/checkpoints/epoch=291-step=209656.ckpt 	{'batch_size': 32, 'hidden_size': 512, 'num_layers': 3, 'output_interval': 1, 'lr': 0.0001, 'max_steps': 300000, 'dropout': 0.25, 'weight_decay': 0.1}
 	MABCDx	.9397	mlp_project/p1rzqxgm/checkpoints/epoch=317-step=228324.ckpt -c 32	{'batch_size': 32, 'hidden': [512, 512], 'lr': 0.0001, 'max_steps': 300000, 'dropout': 0.5, 'weight_decay': 0.1} (instances_per_episode=1, context_length=32)
